Bug 1508699 - Fetch() should not send lowercase header names, r=asuth